Fix illegible white on yellow stacktrace in dark theme

--- a/packages/theme-dark-extension/style/theme.css
+++ b/packages/theme-dark-extension/style/theme.css
@@ -15,3 +15,8 @@ pre {
   font-size: var(--jp-code-font-size);
   line-height: var(--jp-code-line-height);
 }
+
+/* fix illegible yellow backround in exception stacktrace */
+.jp-RenderedText pre .ansi-yellow-bg {
+  background-color: #554422!important;
+}
